working on style

--- a/client/src/Components/Dashboard/MyList/styles.scss
+++ b/client/src/Components/Dashboard/MyList/styles.scss
@@ -21,7 +21,9 @@ $icon-color: #E6020C;
     
     .movie-img-wrapper {
       height: 100%;
-      min-width: 30%;
+      width: 30rem;
+
+      margin-right: 2rem;
       
       position: relative;
       background-color: royalblue;
