--- a/client/src/Components/Dashboard/Discover/styles.scss
+++ b/client/src/Components/Dashboard/Discover/styles.scss
@@ -15,16 +15,18 @@ $icon-color: #E6020C;
     min-width: 100%;
     height: 20rem;
     overflow-x: scroll;
+    padding-left: 4.5%;
 
     display: flex;
 
     
     .movie-img-wrapper {
       height: 100%;
-      min-width: 30%;
+      min-width: 30rem;
       
       position: relative;
-      background-color: royalblue;
+      // background-color: royalblue;
+      margin-right: 1rem;
       
       background-size: contain;
       background-repeat: no-repeat;
