--- a/client/src/Components/Dashboard/AllMovies/styles.scss
+++ b/client/src/Components/Dashboard/AllMovies/styles.scss
@@ -1,21 +1,28 @@
 $icon-color: #E6020C;
 
 .AllMovies {
-  background-color: aqua;
 
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 
   text-align: center;
 
-  padding-top: 2rem;
+  padding-left: 4.5%;
+
+  h1{
+    font-size: 3rem;
+    font-weight: 400;
+    letter-spacing: 1.5px;
+    height: 15%;
+
+    padding: 2rem 0 3rem 0;
+  }
 
   .all-movies-img-wrapper{
-    background-color: pink;
     display: inline-block;
     width: 30rem;
     height: 17rem;
-    margin: 0 0 2rem 1rem;
+    margin: 0 3rem 3rem 0;
 
     position: relative;
 
