--- a/client/src/Components/Dashboard/Discover/styles.scss
+++ b/client/src/Components/Dashboard/Discover/styles.scss
@@ -9,9 +9,10 @@ $icon-color: #E6020C;
     font-weight: 400;
     letter-spacing: 1.5px;
     height: 15%;
+
+    padding: 0 0 2rem 4.5%;
   }
   .movies-list{
-    background-color: red;
     min-width: 100%;
     height: 20rem;
     overflow-x: scroll;
@@ -19,13 +20,11 @@ $icon-color: #E6020C;
 
     display: flex;
 
-    
     .movie-img-wrapper {
       height: 100%;
       min-width: 30rem;
       
       position: relative;
-      // background-color: royalblue;
       margin-right: 1rem;
       
       background-size: contain;
