--- a/client/src/Components/Dashboard/MyList/styles.scss
+++ b/client/src/Components/Dashboard/MyList/styles.scss
@@ -1,7 +1,6 @@
 $icon-color: #E6020C;
 
 .MyList {
-  // background-color: royalblue;
   margin-top: 5rem;
   height: 25%;
 
@@ -10,23 +9,23 @@ $icon-color: #E6020C;
     font-weight: 400;
     letter-spacing: 1.5px;
     height: 15%;
+
+    padding: 0 0 2rem 4.5%;
   }
   .movies-list{
-    background-color: red;
     min-width: 100%;
     height: 20rem;
     overflow-x: scroll;
+    padding-left: 4.5%;
 
     display: flex;
-    
+
     .movie-img-wrapper {
       height: 100%;
-      width: 30rem;
-
-      margin-right: 2rem;
+      min-width: 30rem;
       
       position: relative;
-      background-color: royalblue;
+      margin-right: 1rem;
       
       background-size: contain;
       background-repeat: no-repeat;
