--- a/client/src/Components/Header/styles.scss
+++ b/client/src/Components/Header/styles.scss
@@ -41,6 +41,7 @@ $font-color: white;
       font-size: 2rem;
       background-color: $header-background;
       border: none;
+      color: $font-color;
       &::placeholder{
         color: $font-color;
       }
