--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,3 +1,4 @@
+$scrollbar-color: #555;
 *,
 *::after,
 *::before {
@@ -10,4 +11,19 @@
 html {
   font-size: 62.5%;
   font-family: 'Nunito Sans', sans-serif;
+
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: $scrollbar-color;
+  }
 }
