--- a/client/src/Components/Dashboard/Discover/styles.scss
+++ b/client/src/Components/Dashboard/Discover/styles.scss
@@ -1,4 +1,5 @@
 $icon-color: #E6020C;
+$scrollbar-color: #555;
 
 .Discover {
   margin-top: 5rem;
@@ -47,5 +48,20 @@ $icon-color: #E6020C;
 
       display: none;
     }
+  }
+
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar{
+    width: 12px;
+  }
+
+  ::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: $scrollbar-color;
   }
 }
