--- a/client/src/Components/Dashboard/styles.scss
+++ b/client/src/Components/Dashboard/styles.scss
@@ -3,7 +3,7 @@ $font-color: white;
 
 .Dashboard {
   min-height: 87vh;
-  width: 100vw;
+  max-width: 100vw;
   background-color: $background-color;
   color: $font-color;
 
