--- a/client/src/Components/Dashboard/Discover/styles.scss
+++ b/client/src/Components/Dashboard/Discover/styles.scss
@@ -1,4 +1,4 @@
-$icon-color: #E6020C;
+$icon-color: white;
 $scrollbar-color: #555;
 
 .Discover {
@@ -10,14 +10,14 @@ $scrollbar-color: #555;
     font-weight: 400;
     letter-spacing: 1.5px;
     height: 15%;
+    
 
-    padding: 0 0 2rem 4.5%;
+    padding: 0 0 2rem 0;
   }
   .movies-list{
     min-width: 100%;
     height: 20rem;
     overflow-x: scroll;
-    padding-left: 4.5%;
 
     display: flex;
 
@@ -32,21 +32,43 @@ $scrollbar-color: #555;
       background-repeat: no-repeat;
       &:hover{
         cursor: pointer;
-        .image-icon {
+        .movie-details {
           display: block;
         }
       }
-    }
-    .image-icon {
-      font-size: 3rem;
+      .movie-details {
+        width: 30rem;
+        height: 17rem;
 
-      position: absolute;
-      bottom: 10%;
-      right: 10%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-      color: $icon-color;
+        background-color: rgba(0, 0, 0, 0.527);
+  
+        display: none;
+        padding: .5rem;
+        h1{
+          height: 20%;
+          padding-bottom: .5rem;
+        }
 
-      display: none;
+        p {
+          height: 60%;
+          padding: 1rem;
+          overflow-y: scroll;
+          font-size: 1.5rem;
+          text-align: justify;
+
+        }
+        .image-icon {
+          height: 20%;
+          font-size: 3rem;
+          color: $icon-color;
+          padding-top: .5rem ;
+
+        }
+      }
     }
   }
 
