--- a/client/src/Components/Dashboard/MyList/styles.scss
+++ b/client/src/Components/Dashboard/MyList/styles.scss
@@ -1,4 +1,4 @@
-$icon-color: #E6020C;
+$icon-color: white;
 $scrollbar-color: #555;
 
 .MyList {
@@ -11,13 +11,12 @@ $scrollbar-color: #555;
     letter-spacing: 1.5px;
     height: 15%;
 
-    padding: 0 0 2rem 4.5%;
+    padding: 0 0 2rem 0;
   }
   .movies-list{
     min-width: 100%;
     height: 20rem;
     overflow-x: scroll;
-    padding-left: 4.5%;
 
     display: flex;
 
@@ -32,22 +31,46 @@ $scrollbar-color: #555;
       background-repeat: no-repeat;
       &:hover{
         cursor: pointer;
-        .image-icon {
+        .movie-details {
           display: block;
         }
       }
+      .movie-details {
+        width: 30rem;
+        height: 17rem;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        background-color: rgba(0, 0, 0, 0.527);
+        
+        display: none;
+        padding: .5rem;
+        h1{
+          height: 20%;
+          padding-bottom: .5rem;
+          
+        }
+        
+        p {
+          text-align: justify;
+          height: 60%;
+          padding: 1rem;
+          overflow-y: scroll;
+          font-size: 1.5rem;
+        }
+        .image-icon {
+          height: 20%;
+          font-size: 3rem;
+          color: $icon-color;
+          padding-top: .5rem ;
+
+        }
+      }
     }
-    .image-icon {
-      font-size: 3rem;
+    
 
-      position: absolute;
-      bottom: 10%;
-      right: 10%;
-
-      color: $icon-color;
-
-      display: none;
-    }
   }
   ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
